src/test/deca/syntax/invalid/provided/class18.java
class A{
    int a;
    float b;
    b=a;
}